--- a/templates/basepage.html
+++ b/templates/basepage.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <title>Too Much Information!</title>
+        <link type="text/css" rel="stylesheet" href="/stylesheets/main.css">
     </head>
     
     <body>
