tried to learn some chart making

--- a/templates/basepage.html
+++ b/templates/basepage.html
@@ -4,6 +4,8 @@
     <head>
         <title>Too Much Information!</title>
         <link type="text/css" rel="stylesheet" href="/stylesheets/main.css">
+        {% block head %}
+        {% endblock %}
     </head>
     
     <body>
