added batch timed activity recorder

--- a/templates/panelpage.html
+++ b/templates/panelpage.html
@@ -135,6 +135,14 @@
             <input type="submit">
         </form>
     </div>
+
+    <div class="PanelWrapper" id="BatchTimedActivity">
+        <h2 class="PanelCategory">Batch Timed Activity</h2>
+        <form method="post" action="/postbatchtimedactivity">
+            <textarea name="batchactivities"></textarea><br>
+            <input type="submit">
+        </form>
+    </div>
 </div>
 
 {% endblock %}
